--- a/src/locales/ar.json
+++ b/src/locales/ar.json
@@ -16,10 +16,53 @@
         },
         "sections": {
             "services": "الخدمات",
+            "services-slogan": "حلول متكاملة تغطي التصميم، التطوير، والنشر — من فكرة إلى منتج.",
             "servicesDesc": "هندسة متكاملة، تصميم واجهات وتجربة مستخدم، ونشر سحابي.",
             "work": "أعمال مختارة",
             "blog": "من المدونة",
             "contact": "تواصل معنا"
+        },
+        "services": {
+            "web": {
+                "title": "تطبيقات الويب",
+                "desc": "مواقع حديثة وسريعة وقابلة للتوسع مصممة خصيصاً لتلبية احتياجاتك."
+            },
+            "mobile": {
+                "title": "تطبيقات الجوال",
+                "desc": "تطبيقات iOS و Android بأداء وتجربة مشابهة للتطبيقات الأصلية."
+            },
+            "cloud": {
+                "title": "السحابة و DevOps",
+                "desc": "نشر سلس، خطوط CI/CD، واستضافة سحابية موثوقة."
+            },
+            "uiux": {
+                "title": "تصميم الواجهات والعلامة التجارية",
+                "desc": "واجهات جميلة وسهلة الاستخدام مع هوية بصرية قوية."
+            },
+            "ecommerce": {
+                "title": "حلول التجارة الإلكترونية",
+                "desc": "متاجر إلكترونية سريعة وآمنة وسهلة الإدارة."
+            },
+            "customApps": {
+                "title": "تطبيقات مخصصة",
+                "desc": "برمجيات مصممة خصيصاً لتلبية احتياجات عملك الفريدة."
+            },
+            "security": {
+                "title": "حلول الأمن السيبراني",
+                "desc": "حماية أصولك الرقمية باستخدام أحدث ممارسات الأمان."
+            },
+            "data": {
+                "title": "البيانات والتحليلات",
+                "desc": "احصل على رؤى من خلال تتبع البيانات والتقارير ولوحات المعلومات."
+            },
+            "marketing": {
+                "title": "التسويق الرقمي",
+                "desc": "عزز حضورك على الإنترنت وتواصل مع عملائك بفعالية."
+            },
+            "seo": {
+                "title": "تحسين محركات البحث",
+                "desc": "حسّن ترتيبك واجذب المزيد من الزيارات العضوية."
+            }
         },
         "footer": {
             "rights": "جميع الحقوق محفوظة."
