--- a/src/locales/ar.json
+++ b/src/locales/ar.json
@@ -19,7 +19,8 @@
             "services-slogan": "حلول متكاملة تغطي التصميم، التطوير، والنشر — من فكرة إلى منتج.",
             "servicesDesc": "هندسة متكاملة، تصميم واجهات وتجربة مستخدم، ونشر سحابي.",
             "work": "أعمال مختارة",
-            "blog": "من المدونة",
+            "work-slogan": "مشاريع مختارة نُفِّذت لشركاء في البحرين وخارجها.",
+            "work-button": "عرض جميع الأعمال",
             "contact": "تواصل معنا"
         },
         "services": {
