creating about page and componetns

--- a/src/locales/ar.json
+++ b/src/locales/ar.json
@@ -3,10 +3,7 @@
         "brand": "بحرين كود",
         "nav": {
             "home": "الرئيسية",
-            "services": "الخدمات",
-            "work": "الأعمال",
-            "blog": "المدونة",
-            "contact": "تواصل"
+            "about": "من نحن"
         },
         "hero": {
             "title": "نُطوّر تطبيقات ويب وجوال مذهلة",
