translated about page and its components

--- a/src/locales/ar.json
+++ b/src/locales/ar.json
@@ -65,5 +65,101 @@
         "footer": {
             "rights": "جميع الحقوق محفوظة."
         }
+    },
+    "about": {
+        "badge": "من نحن",
+        "title": "برمجيات مُصممة خصيصًا لفرق العمل الحقيقية",
+        "subtitle": "نصمّم، ونطوّر، ونطلق تطبيقات ويب، وتطبيقات جوال، ومنصات سحابية، وأدوات مدعومة بالذكاء الاصطناعي. من الفكرة إلى مرحلة الإنتاج، نكون شريكك في جميع المراحل.",
+        "story": {
+            "title": "قصتنا",
+            "p1": "تأسست شركة Bahrain Code في البحرين بهدف إنشاء برمجيات عملية تستمتع الفرق باستخدامها، وتتميز بالسرعة والأمان وسهولة الصيانة.",
+            "p2": "اليوم نقوم بتسليم حلول شاملة عبر جميع المستويات: تطبيقات ويب متجاوبة، وتطبيقات جوال بجودة التطبيقات الأصلية، وأنظمة خلفية سحابية، وتكاملات بيانات وذكاء اصطناعي تحقق نتائج ملموسة."
+        },
+        "capabilities": {
+            "badge": "القدرات",
+            "title": "ماذا نبني",
+            "subtitle": "تطوير برمجيات متكامل من البداية للنهاية: الاكتشاف، التصميم، الهندسة، والتسليم.",
+            "web": {
+                "title": "تطبيقات الويب",
+                "desc": "تطبيقات ويب عالية الأداء ومتجاوبة باستخدام تقنيات حديثة وهياكل نظيفة."
+            },
+            "mobile": {
+                "title": "تطبيقات الجوال",
+                "desc": "تطبيقات متعددة المنصات باستخدام React Native: دعم العمل دون اتصال، تشغيل الصوت في الخلفية، وروابط عميقة."
+            },
+            "cloud": {
+                "title": "السحابة وعمليات التطوير",
+                "desc": "خدمات مُحسّنة باستخدام Docker، خطوط CI/CD، المراقبة، ونشر بدون توقف."
+            },
+            "api": {
+                "title": "واجهات برمجة التطبيقات والتكاملات",
+                "desc": "واجهات REST/GraphQL، تكاملات مع أطراف ثالثة، Webhooks، وأنظمة المصادقة."
+            },
+            "dataai": {
+                "title": "البيانات والذكاء الاصطناعي",
+                "desc": "أنظمة تحليل البيانات، البحث المتجهي، المساعدات الذكية، وأدوات الأتمتة."
+            },
+            "commerce": {
+                "title": "التجارة الإلكترونية",
+                "desc": "كتالوجات المنتجات، الدفع، نظام الشراء، ولوحات تحكم إدارية قابلة للتوسع."
+            },
+            "uiux": {
+                "title": "واجهة وتجربة المستخدم وأنظمة التصميم",
+                "desc": "تصميمات قابلة للوصول، دعم اللغات من اليمين لليسار، الوضع الداكن، ومكتبات مكونات قابلة لإعادة الاستخدام."
+            },
+            "support": {
+                "title": "الصيانة والدعم",
+                "desc": "اتفاقيات مستوى الخدمة، تحسين الأداء، تعزيز الأمان، وتسليم الميزات بشكل مستمر."
+            }
+        },
+        "values": {
+            "badge": "القيم",
+            "title": "مبادئنا",
+            "subtitle": "مبادئ تشكّل منتجنا وثقافتنا وطريقة تقديمنا.",
+            "craft": {
+                "title": "الإتقان قبل الحشو",
+                "desc": "نقدّم شيفرات نظيفة وقابلة للاختبار ونولي اهتمامًا للتفاصيل الصغيرة التي تحدث فرقًا كبيرًا."
+            },
+            "trust": {
+                "title": "الثقة من خلال التصميم",
+                "desc": "الأمان والموثوقية وإمكانية المراقبة جزء أساسي من النظام — وليست إضافة لاحقة."
+            },
+            "focus": {
+                "title": "النتائج أهم من الميزات",
+                "desc": "كل دورة تطوير تركز على تحقيق أثر ملموس للمستخدمين وللأعمال."
+            },
+            "care": {
+                "title": "الاهتمام بالناس",
+                "desc": "نصمم تجارب شاملة — سريعة، سهلة الوصول، وتدعم اتجاه الكتابة من اليمين لليسار."
+            }
+        },
+        "timeline": {
+            "badge": "الجدول الزمني",
+            "title": "من الإثبات إلى المنصة",
+            "2023": {
+                "title": "النماذج الأولية والتجارب",
+                "desc": "إطلاق أول نسخ إنتاجية لتطبيقات الويب والجوال؛ تعزيز المصادقة والتحكم في الوصول القائم على الأدوار."
+            },
+            "2024": {
+                "title": "التوسع والموثوقية",
+                "desc": "تحويل الخدمات إلى حاويات، إنشاء خطوط CI/CD، المراقبة، وإطلاق الإصدارات دون توقف."
+            },
+            "2025": {
+                "title": "الذكاء الاصطناعي والأتمتة",
+                "desc": "دمج ميزات الذكاء الاصطناعي للبحث، والتحليلات، وأتمتة سير العمل."
+            }
+        },
+        "stats": {
+            "uptime": "مدة التشغيل (آخر 12 شهرًا)",
+            "deploys": "عمليات النشر / شهريًا",
+            "clients": "العملاء الذين تم خدمتهم",
+            "platforms": "المنصات التي تم تسليمها",
+            "note": "إحصائيات تقريبية استنادًا إلى عمليات النشر الأخيرة."
+        },
+        "cta": {
+            "title": "لنقم ببناء منتجك القادم",
+            "subtitle": "سواء كان منصة ويب، أو تطبيق جوال، أو بنية تحتية سحابية — يمكننا مساعدتك على الإطلاق بشكل أسرع وبثقة.",
+            "button": "ابدأ مشروعك"
+        }
     }
 }
