--- a/src/locales/ar.json
+++ b/src/locales/ar.json
@@ -161,5 +161,10 @@
             "subtitle": "سواء كان منصة ويب، أو تطبيق جوال، أو بنية تحتية سحابية — يمكننا مساعدتك على الإطلاق بشكل أسرع وبثقة.",
             "button": "ابدأ مشروعك"
         }
+    },
+    "notfound": {
+        "title": "الصفحة غير موجودة",
+        "subtitle": "عذرًا، الصفحة التي تبحث عنها غير موجودة أو تم نقلها.",
+        "button": "العودة إلى الصفحة الرئيسية"
     }
 }
