services pages creation

--- a/src/locales/ar.json
+++ b/src/locales/ar.json
@@ -3,7 +3,8 @@
         "brand": "بحرين كود",
         "nav": {
             "home": "الرئيسية",
-            "about": "من نحن"
+            "about": "من نحن",
+            "services": "خدماتنا"
         },
         "hero": {
             "title": "نُطوّر تطبيقات ويب وجوال مذهلة",
@@ -166,5 +167,91 @@
         "title": "الصفحة غير موجودة",
         "subtitle": "عذرًا، الصفحة التي تبحث عنها غير موجودة أو تم نقلها.",
         "button": "العودة إلى الصفحة الرئيسية"
+    },
+    "services": {
+        "badge": "الخدمات",
+        "title": "من الفكرة إلى الإنتاج — نحن نُنجز",
+        "subtitle": "تطبيقات الويب والجوال والسحابة والذكاء الاصطناعي — يتم تسليمها مع التركيز على السرعة والموثوقية وسهولة الصيانة.",
+        "list": {
+            "badge": "ما نقدمه",
+            "title": "الهندسة عبر جميع المستويات",
+            "subtitle": "اختر خدمة واحدة أو اجمع بين عدة خدمات — نحن نتكيف مع فريقك وجدولك الزمني."
+        },
+        "process": {
+            "badge": "العملية",
+            "title": "كيف نعمل",
+            "discover": {
+                "title": "الاكتشاف",
+                "desc": "ورش عمل، متطلبات، وتحديد الأولويات للوصول إلى نتائج واضحة."
+            },
+            "design": {
+                "title": "التصميم",
+                "desc": "تجارب مستخدم، نماذج أولية، وأنظمة تصميم مع مراعاة سهولة الوصول ودعم اتجاه الكتابة من اليمين لليسار."
+            },
+            "build": {
+                "title": "البناء",
+                "desc": "تسليم تدريجي باستخدام خطوط CI/CD، والاختبارات، والمراقبة."
+            },
+            "launch": {
+                "title": "الإطلاق",
+                "desc": "تعزيز الأمان، المراقبة، وخطة نشر لضمان انطلاقة سلسة."
+            }
+        },
+        "engagement": {
+            "badge": "أنماط التعاون",
+            "title": "نماذج التعاون",
+            "subtitle": "اختر ما يناسبك: تطوير مرن، مشروع محدد النطاق، أو فريق مدمج.",
+            "tm": {
+                "title": "الوقت والموارد",
+                "desc": "نطاق عمل مرن، يتم الفوترة حسب الوقت. مثالي للمنتجات المتطورة."
+            },
+            "fixed": {
+                "title": "مشاريع محددة النطاق",
+                "desc": "متطلبات واضحة، جدول زمني، وسعر ثابت."
+            },
+            "squad": {
+                "title": "فريق المنتج",
+                "desc": "فريق متعدد المهام (مدير مشروع، تصميم، تطوير) يعمل جنبًا إلى جنب معك."
+            }
+        },
+        "cards": {
+            "web": {
+                "title": "تطبيقات الويب",
+                "desc": "منصات ويب متجاوبة وسريعة وسهلة الوصول، مبنية بأحدث التقنيات."
+            },
+            "mobile": {
+                "title": "تطبيقات الجوال",
+                "desc": "تطبيقات متعددة المنصات باستخدام React Native: دعم العمل دون اتصال، مهام في الخلفية، وروابط عميقة."
+            },
+            "cloud": {
+                "title": "الحوسبة السحابية وعمليات التطوير",
+                "desc": "Docker، خطوط CI/CD، المراقبة، وإطلاق الإصدارات بدون توقف."
+            },
+            "api": {
+                "title": "واجهات البرمجة والتكاملات",
+                "desc": "واجهات REST/GraphQL، تكاملات مع أطراف ثالثة، Webhooks، وأنظمة المصادقة."
+            },
+            "dataai": {
+                "title": "البيانات والذكاء الاصطناعي",
+                "desc": "البحث، التحليلات، قواعد البيانات الموجهة نحو المتجهات، والمساعدات الذكية التي تؤتمت سير العمل."
+            },
+            "commerce": {
+                "title": "التجارة الإلكترونية",
+                "desc": "كتالوجات المنتجات، الدفع، تعدد العملات، ولوحات تحكم إدارية قابلة للتوسع."
+            },
+            "uiux": {
+                "title": "واجهة وتجربة المستخدم وأنظمة التصميم",
+                "desc": "أنظمة تصميم، دعم اللغات من اليمين لليسار، الوضع الداكن، ومكتبات مكونات قابلة لإعادة الاستخدام."
+            },
+            "security": {
+                "title": "الأمان والامتثال",
+                "desc": "التحكم في الوصول القائم على الأدوار، سجلات التدقيق، التشفير أثناء النقل والتخزين، وأفضل الممارسات."
+            }
+        },
+        "cta": {
+            "title": "هل أنت مستعد للإطلاق بثقة؟",
+            "subtitle": "أخبرنا عن منتجك، وسنقترح لك خطة تناسب النطاق والسرعة والميزانية.",
+            "button": "ابدأ مشروعك"
+        }
     }
 }
