coming soon page

--- a/src/locales/ar.json
+++ b/src/locales/ar.json
@@ -253,5 +253,10 @@
             "subtitle": "أخبرنا عن منتجك، وسنقترح لك خطة تناسب النطاق والسرعة والميزانية.",
             "button": "ابدأ مشروعك"
         }
+    },
+    "comingSoon": {
+        "title": "قريباً",
+        "subtitle": "نعمل جاهدين لنقدم لك شيئاً مذهلاً. ترقبونا!",
+        "backHome": "العودة إلى الرئيسية"
     }
 }
