start project and contact us pages

--- a/src/locales/ar.json
+++ b/src/locales/ar.json
@@ -4,7 +4,10 @@
         "nav": {
             "home": "الرئيسية",
             "about": "من نحن",
-            "services": "خدماتنا"
+            "services": "خدماتنا",
+            "works": "أعمالنا",
+            "start-now": "ابدأ مشروعك",
+            "contact": "تواصل معنا"
         },
         "hero": {
             "title": "نُطوّر تطبيقات ويب وجوال مذهلة",
@@ -258,5 +261,84 @@
         "title": "قريباً",
         "subtitle": "نعمل جاهدين لنقدم لك شيئاً مذهلاً. ترقبونا!",
         "backHome": "العودة إلى الرئيسية"
+    },
+    "start": {
+        "badge": "ابدأ مشروعًا",
+        "title": "أخبرنا عن مشروعك",
+        "subtitle": "سنراجع التفاصيل ونتواصل خلال 1–2 يوم عمل.",
+        "success": "شكرًا لك! تم استلام طلبك.",
+        "fields": {
+            "name": "الاسم الكامل",
+            "email": "البريد الإلكتروني",
+            "phone": "رقم الهاتف",
+            "company": "الشركة",
+            "website": "الموقع الإلكتروني",
+            "services": "ما هي الخدمات التي تحتاجها؟",
+            "budget": "الميزانية",
+            "timeline": "الإطار الزمني",
+            "brief": "وصف المشروع",
+            "file": "إرفاق ملف (اختياري)",
+            "consent": "أوافق على التواصل معي بخصوص طلبي."
+        },
+        "placeholders": {
+            "name": "مثال: أحمد محمد",
+            "company": "اسم شركتك",
+            "select": "اختر…",
+            "brief": "ما الذي تريد بناءه؟ من هم المستخدمون؟ أي أمثلة أو متطلبات أساسية؟",
+            "file": "اختر ملفًا"
+        },
+        "hints": {
+            "selectService": "اختر خدمة واحدة على الأقل."
+        },
+        "actions": {
+            "submit": "إرسال",
+            "sending": "جاري الإرسال…"
+        },
+        "errors": {
+            "fillRequired": "يرجى تعبئة الحقول المطلوبة.",
+            "submitFailed": "فشل الإرسال. حاول مرة أخرى."
+        }
+    },
+    "contact": {
+        "badge": "تواصل معنا",
+        "title": "هيا نتحدث",
+        "subtitle": "أسئلة، عروض أسعار، أو دعم — نحن هنا لمساعدتك.",
+        "success": "شكرًا لك! سنعاود التواصل قريبًا.",
+        "fields": {
+            "name": "الاسم الكامل",
+            "email": "البريد الإلكتروني",
+            "phone": "رقم الهاتف",
+            "topic": "الموضوع",
+            "message": "الرسالة",
+            "file": "إرفاق ملف (اختياري)",
+            "consent": "أوافق على التواصل معي بخصوص طلبي."
+        },
+        "topics": {
+            "sales": "المبيعات",
+            "support": "الدعم",
+            "partnership": "شراكات",
+            "careers": "الوظائف",
+            "other": "أخرى"
+        },
+        "placeholders": {
+            "name": "مثال: أحمد محمد",
+            "select": "اختر…",
+            "message": "كيف يمكننا مساعدتك؟",
+            "file": "اختر ملفًا"
+        },
+        "actions": {
+            "submit": "إرسال الرسالة",
+            "sending": "جاري الإرسال…"
+        },
+        "errors": {
+            "fillRequired": "يرجى تعبئة الحقول المطلوبة.",
+            "submitFailed": "فشل الإرسال. حاول مرة أخرى."
+        },
+        "info": {
+            "title": "طرق التواصل",
+            "subtitle": "تفضّل البريد أو الهاتف؟ متاحون من الأحد إلى الخميس.",
+            "address": "المنامة، مملكة البحرين",
+            "hours": "الأحد–الخميس • 9:00–17:00 (AST)"
+        }
     }
 }
